chore: Cleanup index and styles.

--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">Learn from an industry professional</h3>
             <p data-aos="fade-up" data-aos-delay="100">
-              Captain Coder has worked with Facebook, Google, Sandia National Labs, Los Alamos National Labs and more!
+              Captain Coder has worked with Facebook, Google, Sandia National Labs, 
+              Los Alamos National Labs and more!
 	      Using years of experience in the field and in the classroom, you 
         will receive lessons crafted specifically for you to grow and succeed
-        in the real world projects.
+        in the real world.
             </p>
             <div class="row">
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
@@ -132,92 +133,68 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Curriculum</h2>
-          <p>Current classes</p>
+          <p>Not sure where to start?</p>
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-md-6 col-lg-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="courses/minecraft.pdf" target="_blank">Java Programming in Minecraft</a></h4>
-              <p class="description">Dig into the Minecraft's source code to create your very own custom tools, blocks, and mobs while learning to program</p>
-	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="courses/python.pdf" target="_blank">Python Coding for Teens</a></h4>
-              <p class="description">Python is one of the fastest-growing programming languages and the second-most-popular in the world.</p>
-	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="courses/javascript.pdf" target="_blank">Designing Web Apps with JavaScript</a></h4>
-              <p class="description">JavaScript powers every website on the internet. Learn to harness this power and create your very own web apps!</p>
-	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="courses/java.pdf" target="_blank">Java Coding for Teens</a></h4>
-              <p class="description">Java has been an industry standard for over 20 years. Learn the basics of the Java Virtual Machine and why it is possible for Java to run on almost any computer.</p>
-	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
-            </div>
-          </div>
-	  
-        </div>
-
-
-	
-
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="courses/2dunity.pdf" target="_blank">2D Game Design with Unity</a></h4>
-              <p class="description">Build your own 2D video games with Unity, one of the most popular and versatile game engines.</p>
-	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="courses/unity.pdf" target="_blank">Game Systems with Unity</a></h4>
-              <p class="description">Design engaging gameplay systems, game mechanics, and implement them in a playable project.</p>
-	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="courses/leveldesign.pdf" target="_blank">Level Design with Unreal Engine 4</a></h4>
-              <p class="description">Create stunning 3D video game levels with Unreal Engine 4, one of the most popular and
-powerful 3D game engines.</p>
-	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="courses/unreal.pdf" target="_blank">Game Systems with Unreal Engine 4</a></h4>
+              <div class="icon"><i class="bx bx-code"></i></div>
+              <h4 class="title">Java Programming with Minecraft</h4>
               <p class="description">
-		Utilizing Unreal Engine 4’s powerful visual programming tools,
-		design engaging gameplay systems and mechanics.</p>
+                The Captain has developed a library called "The World's of Minecraft"
+                which engages students in modifying the source code of one of their
+                favorite games while learning how to program in Minecraft.
+              </p>
 	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
             </div>
           </div>
+
+
+          <div class="col-md-6 col-lg-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <h4 class="title">Designing Web Apps with JavaScript</h4>
+              <p class="description">
+                JavaScript powers every website on the internet. 
+                Learn to harness the power of HTML, CSS, and JavaScript 
+                to create beautiful interactive web applications!
+              </p>
+	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
+            </div>
+          </div>
+
 	  
         </div>
+
+        <div class="row">
+          <div class="col-md-6 col-lg-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-run"></i></div>
+              <h4 class="title">Game Development with C# and Unity</h4>
+              <p class="description">
+                Jump right into the action and learn how to create
+                games using the industry standard: Unity. Along the way,
+                you'll learn how to write your very own scripts using C#
+                and deploy your creations!
+              </p>
+	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
+            </div>
+          </div>
+
+
+          <div class="col-md-6 col-lg-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-terminal"></i></div>
+              <h4 class="title">Data Analysis with Python</h4>
+              <p class="description">
+                Python is one of the most popular programming languages used by
+                data scientists. Learn how to use python to analyze real world data
+                sets and machine learning libraries.
+              </p>
+	      <a href="./signup.html" class="btn-sign-up">Sign Up</a>
+            </div>
+          </div>
 	
 	
       </div>
